src/snapshots/lambda3__cst__tests__parse_patterns_test@wildcard.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/patterns/wildcard.l3
---
(
    "_",
    [],
    Root@0..1
      WildcardP@0..1
        Underscore@0..1 "_"
    ,
)
