src/snapshots/lambda3__cst__tests__parse_type_test@nested_parens_type.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/types/nested_parens_type.l3

---
(
    "(Int->Int)->(Bool->Bool)",
    [],
    Root@0..24
      FuncTy@0..24
        TyArg@0..10
          ParenTy@0..10
            LParen@0..1 "("
            FuncTy@1..9
              TyArg@1..4
                IntTy@1..4
                  Int@1..4 "Int"
              Arrow@4..6 "->"
              TyRes@6..9
                IntTy@6..9
                  Int@6..9 "Int"
            RParen@9..10 ")"
        Arrow@10..12 "->"
        TyRes@12..24
          ParenTy@12..24
            LParen@12..13 "("
            FuncTy@13..23
              TyArg@13..17
                BoolTy@13..17
                  Bool@13..17 "Bool"
              Arrow@17..19 "->"
              TyRes@19..23
                BoolTy@19..23
                  Bool@19..23 "Bool"
            RParen@23..24 ")"
    ,
)
