src/snapshots/lambda3__cst__tests__parse_type_test@simple_bool_ty.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/types/simple_bool_ty.l3
---
(
    "Bool",
    [],
    Root@0..4
      BoolTy@0..4
        Bool@0..4 "Bool"
    ,
)
