src/snapshots/lambda3__cst__tests__parse_type_test@simple_int_ty.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/types/simple_int_ty.l3
---
(
    "Int",
    [],
    Root@0..3
      IntTy@0..3
        Int@0..3 "Int"
    ,
)
