src/snapshots/lambda3__cst__tests__test@missing_arrow.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/missing_arrow.l3
---
(
    "(\\x  x x) (\\y -> y)",
    [
        "expected \'->\', got WORD",
        "unexpected token WORD, expected \')\'",
    ],
    ROOT@0..19
      APPLICATION@0..19
        PARENTHESIZED@0..9
          L_PAREN@0..1 "("
          LAMBDA@1..3
            LAM@1..2 "\\"
            BINDER@2..3
              WORD@2..3 "x"
          ERROR@3..8
            WHITESPACE@3..5 "  "
            WORD@5..6 "x"
            WHITESPACE@6..7 " "
            WORD@7..8 "x"
          R_PAREN@8..9 ")"
        PARENTHESIZED@9..19
          WHITESPACE@9..10 " "
          L_PAREN@10..11 "("
          LAMBDA@11..18
            LAM@11..12 "\\"
            BINDER@12..13
              WORD@12..13 "y"
            WHITESPACE@13..14 " "
            ARROW@14..16 "->"
            VAR@16..18
              WHITESPACE@16..17 " "
              WORD@17..18 "y"
          R_PAREN@18..19 ")"
    ,
)
