src/snapshots/lambda3__cst__tests__test@missing_binder.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/missing_binder.l3
---
(
    "(\\ -> x)",
    [
        "expected binder, got Arrow",
    ],
    RootE@0..8
      ParenE@0..8
        LParen@0..1 "("
        LambdaE@1..7
          Backslash@1..2 "\\"
          Error@2..2
          Whitespace@2..3 " "
          Arrow@3..5 "->"
          VarE@5..7
            Whitespace@5..6 " "
            Ident@6..7 "x"
        RParen@7..8 ")"
    ,
)
