src/snapshots/lambda3__cst__tests__test@missing_body.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/missing_body.l3
---
(
    "(\\x ->)",
    [
        "Expected expression",
    ],
    ROOT@0..7
      PARENTHESIZED@0..7
        L_PAREN@0..1 "("
        LAMBDA@1..6
          LAM@1..2 "\\"
          BINDER@2..3
            WORD@2..3 "x"
          WHITESPACE@3..4 " "
          ARROW@4..6 "->"
          ERROR@6..6
        R_PAREN@6..7 ")"
    ,
)
