src/snapshots/lambda3__cst__tests__test@missing_body_rparen.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/missing_body_rparen.l3
---
(
    "(\\x ->",
    [
        "Expected expression",
        "unexpected token EOF, expected \')\'",
    ],
    ROOT@0..6
      PARENTHESIZED@0..6
        L_PAREN@0..1 "("
        LAMBDA@1..6
          LAM@1..2 "\\"
          WORD@2..3 "x"
          WHITESPACE@3..4 " "
          ARROW@4..6 "->"
          ERROR@6..6
        ERROR@6..6
    ,
)
