src/snapshots/lambda3__cst__tests__test@simple_application.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/simple_application.l3
---
(
    "x x",
    [],
    ROOT@0..3
      APPLICATION@0..3
        VAR@0..1
          WORD@0..1 "x"
        VAR@1..3
          WHITESPACE@1..2 " "
          WORD@2..3 "x"
    ,
)
